# todo-fastapi

./: .gitignore  README.md  asgi.py  build.sh  docker-compose.yaml  main.py  models.py  pyproject.toml  run.sh  schema.py
docker/: Dockerfile  entrypoint.sh
migrations/: env.py
migrations/versions/: 6b8e56c9b415_first_migration.py
tests/request_objects/: __init__.py  test_todo_create.py  test_todo_detail.py  test_todo_list.py  test_todo_update.py
todo_app/: __init__.py  database.py  models.py  schema.py  utils.py
todo_app/domain/: todo.py
todo_app/repositories/: interface.py
todo_app/repositories/sqla/: models.py  repo.py
todo_app/request_objects/: __init__.py  pagination.py  todo_create.py  todo_detail.py  todo_id.py  todo_list.py  todo_paginate.py  todo_update.py
todo_app/rest/: __init__.py  models.py  settings.py  utils.py
todo_app/rest/routers/: todos.py
todo_app/routers/: todos.py
todo_app/use_cases/: todo_create.py  todo_delete.py  todo_detail.py  todo_list.py  todo_update.py
