[tool.poetry]
name = "todo-fastapi"
version = "0.1.0"
description = ""
authors = ["Pyunghyuk Yoo <yoophi@gmail.com>"]
packages = [{ include = "todo_app" }]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.63.0"
SQLAlchemy = "^1.3.23"
uvicorn = "^0.13.4"
PyMySQL = "^1.0.2"
loguru = "^0.5.3"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
alembic = "^1.5.8"
pytest = "^6.2.2"
pytest-watch = "^4.2.0"
sqlalchemy_utils = "^0.36.8"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
